<resources>
    <string name="app_name">Koda</string>
    
    <!-- Main -->
    <string name="start_typing">Start typing…</string>
    <string name="empty_state_message">To get started, tap the menu icon in the top right corner</string>
    <string name="app_slogan">Editing made easy</string>
    <string name="start">Start</string>
    
    <!-- Menu -->
    <string name="menu_new">New</string>
    <string name="menu_open">Open</string>
    <string name="menu_open_multiple">Open Multiple</string>
    <string name="menu_save">Save</string>
    <string name="menu_save_as">Save As</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_open_last">Open Last…</string>

    <!-- Start Page -->
    <string name="start_new_file">New File…</string>
    <string name="start_open_file">Open File…</string>
    <string name="start_open_multiple">Open Multiple…</string>
    
    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_main">Main Settings</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_about">About</string>
    
    <string name="setting_open_new">Open New File</string>
    <string name="setting_open_new_desc">Opens new empty file when app opens</string>
    <string name="setting_open_new_desc_both">Opens new empty file (active) and last file in separate tab</string>
    <string name="setting_open_last">Open Last</string>
    <string name="setting_open_last_desc">Opens last edited file when app opens</string>
    <string name="setting_open_last_desc_both">Opens new empty file (active) and last file in separate tab</string>
    <string name="setting_auto_save">Auto Save</string>
    <string name="setting_auto_save_desc">Automatically save currently editing file when window is closed</string>
    <string name="setting_wrap_lines">Wrap Lines</string>
    <string name="setting_wrap_lines_desc">Wrap the line if text is too long</string>
    <string name="setting_wake_lock">Use WakeLock</string>
    <string name="setting_wake_lock_desc">Prevent device going to sleep mode</string>
    <string name="setting_save_folder">Save Folder</string>
    <string name="setting_save_folder_desc">Default folder for saving new files</string>
    <string name="setting_save_folder_default">Click to select a default save folder</string>
    <string name="setting_save_folder_changed">Save folder changed</string>
    <string name="select_folder">Select Folder</string>
    <string name="file_exists">File Exists</string>
    <string name="file_exists_message">A file with this name already exists. Do you want to replace it?</string>
    <string name="replace">Replace</string>
    <string name="choose_folder">Choose Folder</string>
    <string name="later">Later</string>
    <string name="folder_selected">Folder selected</string>
    <string name="folder_selected_to">Folder set: %1$s</string>
    <string name="setup_save_folder">Set Save Folder</string>
    <string name="setup_save_folder_message">Choose a default folder where your files will be saved. You can change this later in Settings.</string>
    
    <string name="setting_language">Language</string>
    <string name="setting_font">Font</string>
    <string name="setting_font_size">Font Size</string>
    <string name="choose_language">Choose Language</string>
    <string name="choose_font">Choose a font type</string>
    <string name="choose_font_size">Choose a font size</string>
    
    <string name="version">Version</string>
    <string name="about_koda">About Koda</string>
    <string name="about_koda_desc">Just a little FYI</string>
    <string name="about_content">This is a clean and simple Android text editor made in Kotlin.\n\nFor more visit: https://github.com/s17labs/koda</string>
    
    <!-- Dialogs -->
    <string name="unsaved_changes">Unsaved Changes</string>
    <string name="unsaved_changes_message">You have unsaved changes. Do you want to save before exiting?</string>
    <string name="save_and_exit">Save &amp; Exit</string>
    <string name="exit_without_saving">Exit Without Saving</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="dont_save">Don\'t Save</string>
    <string name="save_changes">Do you want to save changes to %1$s?</string>
    
    <!-- File Save Dialog -->
    <string name="enter_file_name">Enter File Name</string>
    <string name="file_name_hint">File name</string>
    <string name="select_save_location">Select save location</string>
    <string name="save_location_required">Please select a save location</string>

    <!-- Messages -->
    <string name="nothing_to_save">Nothing to save</string>
    <string name="file_saved">File saved</string>
    <string name="error_saving">Error saving file: %1$s</string>
    <string name="error_opening">Error opening file: %1$s</string>
    <string name="settings_coming_soon">Settings coming soon</string>
    <string name="language_changed">Language changed to %1$s</string>
    
    <!-- Debug Log -->
    <string name="debug_log">Debug Log</string>
    <string name="debug_log_desc">View and Export debug logs</string>
    <string name="clear">Clear</string>
    <string name="copy">Copy</string>
    <string name="export">Export</string>
    <string name="logs_cleared">Logs cleared</string>
    <string name="logs_copied">Logs copied to clipboard</string>
    <string name="logs_exported">Logs exported successfully</string>
    <string name="export_failed">Failed to export logs</string>
    <string name="no_logs">No logs yet</string>
</resources>