<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_menu_new"
        android:title="@string/menu_new" />

    <item
        android:id="@+id/action_open"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/menu_open" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_menu_save"
        android:title="@string/menu_save" />

    <item
        android:id="@+id/action_save_as"
        android:icon="@drawable/ic_menu_save_as"
        android:title="@string/menu_save_as" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/menu_settings" />

    <item
        android:id="@+id/action_exit"
        android:icon="@drawable/ic_menu_exit"
        android:title="@string/menu_exit" />

</menu>