<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/startPageContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/kodaEditorBg"
    android:paddingTop="64dp"
    android:paddingHorizontal="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/kodaText"
        android:textSize="32sp"
        android:textStyle="bold"
		android:typeface="monospace"
		android:paddingHorizontal="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_slogan"
        android:textColor="@color/kodaTextSecondary"
        android:textSize="16sp"
		android:paddingHorizontal="12dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textColor="@color/kodaText"
        android:textSize="14sp"
        android:textStyle="bold"
		android:paddingHorizontal="12dp"
		android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:id="@+id/btnNewFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_menu_new"
            app:tint="@color/kodaBlue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_new_file"
            android:textColor="@color/kodaBlue"
            android:textSize="16sp"
            android:layout_marginStart="16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnOpenFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_menu_folder"
            app:tint="@color/kodaBlue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_open_file"
            android:textColor="@color/kodaBlue"
            android:textSize="16sp"
            android:layout_marginStart="16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnOpenMultiple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_menu_folder"
            app:tint="@color/kodaBlue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_open_multiple"
            android:textColor="@color/kodaBlue"
            android:textSize="16sp"
            android:layout_marginStart="16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnOpenLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_archive"
            app:tint="@color/kodaBlue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_open_last"
            android:textColor="@color/kodaBlue"
            android:textSize="16sp"
            android:layout_marginStart="16dp" />

    </LinearLayout>

</LinearLayout>
